packages/typ/tests/fixtures/diagnostics/0193_adt_record_field_int_bool_07.ml.expected
File "0193_adt_record_field_int_bool_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0193_adt_record_field_int_bool_07 is not a valid module name.

File "0193_adt_record_field_int_bool_07.ml", line 2, characters 28-32:
2 | let _ : rec_eta = { index = true; seen = true }
                                ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
