packages/typ/tests/fixtures/diagnostics/0193_adt_record_field_int_bool_07.ml
type rec_eta = { index : int; seen : bool }
let _ : rec_eta = { index = true; seen = true }
